Added support for checking out the H-Store research files into a EBS directory and creating a symlink on EC2

--- a/build.xml
+++ b/build.xml
@@ -971,6 +971,7 @@ TEST CASES
         unless="junit-getfiles.exists">
     <exec dir="${tools.dir}" executable="./getfiles.py">
         <arg line="--copy=${localcopy}" />
+        <arg line="--symlink=${symlink}" />
         <arg line="${files.dir}" />
     </exec>
 </target>
