--- a/log4j.properties
+++ b/log4j.properties
@@ -11,6 +11,7 @@ log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern=%d{ABSOLUTE} [%t] (%F:%L) %-5p - %m%n
 
 ## H-Store Internals
+log4j.logger.edu.brown.hstore.AntiCacheManager=INFO
 log4j.logger.edu.brown.hstore.HStoreSite=INFO
 log4j.logger.edu.brown.hstore.HStoreCoordinator=INFO
 log4j.logger.edu.brown.hstore.PartitionExecutor=INFO
