Comment out the S3 two phase commit profiling support, have no idea why it fails to load data

--- a/properties/benchmarks/tpcc.properties
+++ b/properties/benchmarks/tpcc.properties
@@ -21,7 +21,7 @@ noop                    = false
 neworder_only           = false
 neworder_abort          = true
 neworder_multip         = true
-neworder_multip_remote  = false
+neworder_multip_remote  = true
 neworder_skew_warehouse = false
 neworder_multip_mix     = -1
 reset_on_clear          = false
