--- a/log4j.properties
+++ b/log4j.properties
@@ -27,8 +27,8 @@ log4j.appender.RING.layout.ConversionPattern=%d{ABSOLUTE} [%t] %-5p - %m%n
 #log4j.logger.edu.brown.hstore.HStoreCoordinator=DEBUG, RING
 #log4j.additivity.edu.brown.hstore.HStoreCoordinator=false
 
-log4j.logger.edu.brown.hstore.HStoreSite=INFO
-log4j.logger.edu.brown.hstore.PartitionExecutor=INFO
+log4j.logger.edu.brown.hstore.HStoreSite=DEBUG
+log4j.logger.edu.brown.hstore.PartitionExecutor=DEBUG
 log4j.logger.edu.brown.hstore.HStoreCoordinator=INFO
 log4j.logger.edu.brown.hstore.TransactionInitializer=INFO
 log4j.logger.edu.brown.hstore.TransactionQueueManager=INFO
