Added new config options for controlling TPC-C Payment distributed txns #90

--- a/properties/benchmarks/tpcc.properties
+++ b/properties/benchmarks/tpcc.properties
@@ -18,11 +18,17 @@ loadthread_per_warehouse = true
 ## Testing Options
 ## See src/benchmarks/org/voltdb/benchmarks/tpcc/TPCCConfig.java
 noop                    = false
+reset_on_clear          = false
+
+# Only execute NewOrder txns
 neworder_only           = false
 neworder_abort          = true
 neworder_multip         = true
 neworder_multip_remote  = false
 neworder_skew_warehouse = false
 neworder_multip_mix     = -1
-reset_on_clear          = false
 
+# Only execute Payment txns
+payment_only            = false
+payment_multip          = true
+payment_multip_remote   = false
