Adding ability to control the percentage of dtxns for TPC-C's payment

--- a/properties/benchmarks/tpcc.properties
+++ b/properties/benchmarks/tpcc.properties
@@ -32,3 +32,4 @@ neworder_multip_mix     = -1
 payment_only            = false
 payment_multip          = true
 payment_multip_remote   = false
+payment_multip_mix     = -1
