--- a/log4j.properties
+++ b/log4j.properties
@@ -15,6 +15,7 @@ log4j.logger.edu.brown.hstore.PartitionExecutor=INFO
 log4j.logger.edu.brown.hstore.HStoreCoordinator=INFO
 log4j.logger.edu.brown.hstore.TransactionInitializer=INFO
 log4j.logger.edu.brown.hstore.TransactionQueueManager=INFO
+log4j.logger.edu.brown.hstore.TransactionInitPriorityQueue=INFO
 log4j.logger.edu.brown.hstore.BatchPlanner=INFO
 log4j.logger.edu.brown.hstore.txns=INFO
 log4j.logger.edu.brown.hstore.callbacks=INFO
