--- a/properties/benchmarks/ycsb.properties
+++ b/properties/benchmarks/ycsb.properties
@@ -3,3 +3,8 @@
 ## ------------------------------------------------------------
 
 builder = edu.brown.benchmark.ycsb.YCSBProjectBuilder
+
+# If 'fixed_size' is set to true, then then the YCSBLoader will
+# only add the number of tuples defined in 'num_records'
+fixed_size = false
+num_records = -1
