Reverted back to original configuration

--- a/properties/benchmarks/tpcc.properties
+++ b/properties/benchmarks/tpcc.properties
@@ -7,12 +7,12 @@ workload.ignore     = LoadWarehouse,LoadWarehouseReplicated
 
 ## These parameters will make the benchmark use one WAREHOUSE
 ## and one loader thread per partition in the cluster
-warehouse_per_partition = false
+warehouse_per_partition = true
 loadthread_per_warehouse = true
 
 ## Or you can use these parameters to specifically
 ## control the number of warehouses and/or load threads
-warehouses = 100
+# warehouses = 4
 # loadthreads = 4
 
 ## Testing Options
@@ -24,13 +24,13 @@ warehouse_pairing       = false
 # Only execute NewOrder txns
 neworder_only           = false
 neworder_abort          = true
-neworder_multip         = false
+neworder_multip         = true
 neworder_multip_remote  = false
 neworder_skew_warehouse = false
 neworder_multip_mix     = -1
 
 # Only execute Payment txns
 payment_only            = false
-payment_multip          = false
+payment_multip          = true
 payment_multip_remote   = false
 payment_multip_mix     = -1
