--- a/build.xml
+++ b/build.xml
@@ -77,8 +77,9 @@
 <!-- emma build instrumentation location -->
 <property name='build.instr.dir'             location='${build.dir}/instr' />
 
-<property name='jprofiler.dir'                  location='/home/ubuntu/jprofiler' />
-<property name='jprofiler.port'                 value='8849' />
+<!-- JProfiler Parameters -->
+<property name='jprofiler.dir'               location='/home/ubuntu/Programs/jprofiler' />
+<property name='jprofiler.port'              value='8849' />
 
 <taskdef resource="net/sf/antcontrib/antcontrib.properties">
     <classpath>
@@ -2490,8 +2491,8 @@ UTILITIES
     <java fork="yes" classname="edu.brown.hstore.HStore">
         <!-- Use to identify what process this for killing -->
         <jvmarg value="-Dhstore.tag=site" />
+        
         <!-- Initial Heap Size -->
-
         <jvmarg value="-Xms100m" />
         <!-- Maximum Heap Size -->
         <jvmarg value="-Xmx${site.memory}m" />
@@ -2504,6 +2505,10 @@ UTILITIES
         <!-- <jvmarg value="-XX:+UseConcMarkSweepGC" /> -->
         <!-- <jvmarg value="-XX:+CMSIncrementalMode" /> -->
 
+        <!-- Java 1.7 G1 Garbage Collector -->
+        <jvmarg value="-XX:+UseG1GC" />
+        <jvmarg value="-XX:+UseCompressedOops" />
+
         <!-- Garbage Collector Debug Output -->
         <!-- <jvmarg value="-verbose:gc" /> -->
         <!-- <jvmarg value="-XX:+PrintGCDetails" /> -->
@@ -2513,9 +2518,7 @@ UTILITIES
         <!-- Other JVM Options -->
         <jvmarg value="-Dlog4j.configuration=${basedir}/log4j.properties"/>
         <jvmarg value="-server" />
-        <!-- <jvmarg value="-Djava.library.path=${build.dir}/nativelibs:${jprofiler.dir}/bin/linux-x64:/usr/lib" /> -->
         <jvmarg value="-Djava.library.path=${build.dir}/nativelibs" />
-<!--         <jvmarg value="-Xcheck:jni" /> -->
 
         <arg value="catalog.jar=${jar}" />
         <arg value="conf=${conf}" />
