Reenable anti-caching tests

--- a/build.xml
+++ b/build.xml
@@ -1049,7 +1049,7 @@ TEST CASES
                 <exclude name="**/TestPrefetchableSuite.class" />
                 <exclude name="**/TestWikipediaSuite.class" />
                 <exclude name="**/TestWikipediaLoader.class" />
-                <exclude name="**/TestAntiCache*.class" />
+<!--                 <exclude name="**/TestAntiCache*.class" /> -->
                 
                 <!-- Tests that use too much memory -->
                 <exclude name='edu/brown/benchmark/seats/TestSEATSSuite.class'/>
@@ -1138,7 +1138,7 @@ TEST CASES
                 <exclude name="**/TestPrefetchableSuite.class" />
                 <exclude name="**/TestWikipediaSuite.class" />
                 <exclude name="**/TestWikipediaLoader.class" />
-                <exclude name="**/TestAntiCache*.class" />
+<!--                 <exclude name="**/TestAntiCache*.class" /> -->
 
                 <!-- Tests that use too much memory -->
                 <exclude name='edu/brown/benchmark/seats/TestSEATSSuite.class'/>
@@ -1218,7 +1218,7 @@ TEST CASES
                     <exclude name="**/TestPrefetchableSuite.class" />
                     <exclude name="**/TestWikipediaSuite.class" />
                     <exclude name="**/TestWikipediaLoader.class" />
-                    <exclude name="**/TestAntiCache*.class" />
+<!--                     <exclude name="**/TestAntiCache*.class" /> -->
                 </fileset>
             </tests>
         </run_junit>
