Make sure we disable skew warehouse in TPC-C by default

--- a/properties/benchmarks/tpcc.properties
+++ b/properties/benchmarks/tpcc.properties
@@ -26,7 +26,7 @@ neworder_only           = false
 neworder_abort          = true
 neworder_multip         = true
 neworder_multip_remote  = false
-neworder_skew_warehouse = true
+neworder_skew_warehouse = false
 neworder_multip_mix     = -1
 
 # Only execute Payment txns
