--- a/build.xml
+++ b/build.xml
@@ -2498,7 +2498,7 @@ UTILITIES
         <jvmarg value="-Xmx${site.memory}m" />
 
         <!-- JProfiler -->
-        <jvmarg value="-agentpath:${jprofiler.dir}/bin/linux-x64/libjprofilerti.so=port=${jprofiler.port}" /> 
+        <!-- <jvmarg value="-agentpath:${jprofiler.dir}/bin/linux-x64/libjprofilerti.so=port=${jprofiler.port}" /> --> 
 
         <!-- Parallel Garbage Collector (Slower) -->
         <!-- <jvmarg value="-XX:+UseParNewGC" /> -->
