dev for reconfig, adding reconfig coordinator

--- a/properties/default.properties
+++ b/properties/default.properties
@@ -20,6 +20,8 @@ global.sshoptions = -x
 # This can't be removed from this file
 global.defaulthost = localhost
 
+global.hasherClass=edu.brown.hashing.PlannedHasher
+
 ## ------------------------------------------------------------
 ## Benchmark Client Parameters
 ## ------------------------------------------------------------
