small fix for regression tests

--- a/properties/default.properties
+++ b/properties/default.properties
@@ -20,7 +20,7 @@ global.sshoptions = -x
 # This can't be removed from this file
 global.defaulthost = localhost
 
-global.hasher_class=edu.brown.hashing.PlannedHasher
+#global.hasher_class=edu.brown.hashing.PlannedHasher
 
 ## ------------------------------------------------------------
 ## Benchmark Client Parameters
