--- a/properties/benchmarks/smallbank.properties
+++ b/properties/benchmarks/smallbank.properties
@@ -3,3 +3,11 @@
 ## ------------------------------------------------------------
 
 builder = edu.brown.benchmark.smallbank.SmallBankProjectBuilder
+
+# The probability that customer's will be randomly selected from the hotspot accounts
+# You can change the hotspot size in SmallBankConstants [0% - 100%]
+prob_account_hotspot = 90
+
+# The probability that the multi-account transactions will be guaranteed 
+# to be multi-partition [0% - 100%].
+prob_multiaccount_dtxn = 0
