--- a/properties/benchmarks/smallbank.properties
+++ b/properties/benchmarks/smallbank.properties
@@ -11,3 +11,7 @@ prob_account_hotspot = 90
 # The probability that the multi-account transactions will be guaranteed 
 # to be multi-partition [0% - 100%].
 prob_multiaccount_dtxn = 0
+
+# If set to true, then all multi-account distributed transactions will
+# attempt to access partitions that are stored in different sites
+force_multisite_dtxns = false
