Added new SmallBank config option to force txns to be single-sited #117

--- a/properties/benchmarks/smallbank.properties
+++ b/properties/benchmarks/smallbank.properties
@@ -13,5 +13,9 @@ prob_account_hotspot = 90
 prob_multiaccount_dtxn = 0
 
 # If set to true, then all multi-account distributed transactions will
-# attempt to access partitions that are stored in different sites
+# be forced to access partitions that are stored in different sites
 force_multisite_dtxns = false
+
+# If set to true, then all multi-account distributed transactions will
+# be forced to access partitions that are stored on the same site
+force_singlesite_dtxns = false
