--- a/log4j.properties
+++ b/log4j.properties
@@ -10,7 +10,6 @@ log4j.appender.A1=org.apache.log4j.ConsoleAppender
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern=%d{ABSOLUTE} [%t] (%F:%L) %-5p - %m%n
 
-
 ## H-Store Internals
 log4j.logger.edu.brown.hstore.HStoreSite=INFO
 log4j.logger.edu.brown.hstore.HStoreCoordinator=INFO
@@ -43,6 +42,7 @@ log4j.logger.edu.brown.hstore.estimators.markov=INFO
 log4j.logger.edu.brown.hstore.specexec=INFO
 log4j.logger.edu.brown.statistics=INFO
 log4j.logger.edu.brown.markov=INFO
+log4j.logger.edu.brown.mappings=INFO
 log4j.logger.edu.brown.costmodel=INFO
 log4j.logger.edu.brown.designer=INFO
 
