--- a/properties/benchmarks/tpcc.properties
+++ b/properties/benchmarks/tpcc.properties
@@ -23,7 +23,9 @@ warehouse_pairing       = false
 
 # Only execute NewOrder txns
 neworder_only           = false
-neworder_abort          = true
+# Percentage of NewOrder txns that will abort [0-100%]
+# Default is 1%
+neworder_abort          = 100
 neworder_multip         = true
 neworder_multip_remote  = false
 neworder_skew_warehouse = false
