Switch back to abbreviated Benchmark log4j output

--- a/log4j.properties
+++ b/log4j.properties
@@ -76,8 +76,8 @@ log4j.appender.RING.layout.ConversionPattern=%d{ABSOLUTE} [%t] %-5p - %m%n
 
 log4j.appender.BENCHMARK=org.apache.log4j.ConsoleAppender
 log4j.appender.BENCHMARK.layout=org.apache.log4j.PatternLayout
-log4j.appender.BENCHMARK.layout.ConversionPattern=%d{ABSOLUTE} [%t] (%F:%L) %-5p - %m%n
-#log4j.appender.BENCHMARK.layout.ConversionPattern=%d{ABSOLUTE} %-5p - %m%n
+#log4j.appender.BENCHMARK.layout.ConversionPattern=%d{ABSOLUTE} [%t] (%F:%L) %-5p - %m%n
+log4j.appender.BENCHMARK.layout.ConversionPattern=%d{ABSOLUTE} %-5p - %m%n
 
 # Note that you have to mark 'additivity' as false, otherwise all of
 # these loggers will append to the ROOT logger too
