Added new TPCC config option 'neworder_abort_dtxns' to have all distributed txns be aborted at runtime

--- a/properties/benchmarks/tpcc.properties
+++ b/properties/benchmarks/tpcc.properties
@@ -32,6 +32,10 @@ neworder_only           = false
 # Percentage of NewOrder txns that will abort [0-100%]. Default is 1%
 # neworder_abort        = 1
 
+# If this flag is set to true, all distributed NewOrder transactions will
+# abort when they are executed
+# neworder_abort_dtxns = false
+
 # Whether to allow NewOrder txns to touch multiple partitions
 # You can control the percentage of these txns with neworder_multip_mix
 neworder_multip         = true
