Added the ability to have GraphvizExport code for dumping out schemas to include the foreign key dependencies

--- a/build.xml
+++ b/build.xml
@@ -1942,6 +1942,7 @@ UTILITIES
     <java fork="yes" classname="edu.brown.graphs.GraphvizExport">
         <jvmarg value="-Xmx512m" />
         <arg value="catalog.jar=${jar}" />
+        <arg value="catalog.labels=${labels}" />
         <arg line="${ignore}" />
         <classpath refid='project.classpath' />
         <assertions>
