--- a/log4j.properties
+++ b/log4j.properties
@@ -34,7 +34,7 @@ log4j.logger.edu.brown.utils=INFO
 log4j.logger.org.voltdb.VoltProcedure=INFO
 log4j.logger.org.voltdb.VoltSystemProcedure=INFO
 log4j.logger.org.voltdb.client=INFO
-log4j.logger.org.voltdb.compiler=INFO
+log4j.logger.org.voltdb.compiler.DDLCompiler=INFO
 log4j.logger.org.voltdb.planner=INFO
 
 ## Research Projects
