Disable the fixed tuple count config parameter for YCSB

--- a/properties/benchmarks/ycsb.properties
+++ b/properties/benchmarks/ycsb.properties
@@ -6,5 +6,5 @@ builder = edu.brown.benchmark.ycsb.YCSBProjectBuilder
 
 # If 'fixed_size' is set to true, then then the YCSBLoader will
 # only add the number of tuples defined in 'num_records'
-fixed_size = true
+fixed_size = false
 num_records = 100000
