A couple of things here:
(1) We now only build the anticaching component in the EE if the HStoreConf 'site.anticache_enable' feature is enabled. This was for @jdebrabant

(2) Likewise, you can now pass in from the commandline whether you want the reversible LRU chain in the anti-cache

(3) Added initial code to get @jarulraj started on building out the mmap version of H-Store's storage manager.

--- a/build.xml
+++ b/build.xml
@@ -858,7 +858,12 @@ NATIVE EE STUFF
 </target>
 <target name="ee-build">
     <exec dir='.' executable='python' failonerror='true'>
-        <arg line="build.py LOG_LEVEL=${site.exec_ee_log_level} ${build}" />
+        <arg value="build.py" />
+        <arg value="LOG_LEVEL=${site.exec_ee_log_level}" />
+        <arg value="MMAP_STORAGE=${site.storage_mmap}" />
+        <arg value="ANTICACHE_ENABLE=${site.anticache_enable}" />
+        <arg value="ANTICACHE_REVERSIBLE_LRU=${site.anticache_reversible_lru}" />
+        <arg value="${build}" />
     </exec>
 </target>
 
