--- a/build.xml
+++ b/build.xml
@@ -765,6 +765,7 @@ NATIVE EE STUFF
     <delete file="${src.ee.dir}/org_voltdb_jni_ExecutionEngine.h" />
     <delete file="${src.ee.dir}/org_voltdb_utils_DBBPool.h" />
     <delete file="${src.ee.dir}/org_voltdb_utils_ThreadUtils.h" />
+	<delete file="${src.ee.dir}/org_voltdb_utils_ProcessUtils.h" />
     <move
         file='${build.dir}/org_voltdb_jni_ExecutionEngine.h'
         todir='${src.ee.dir}'
@@ -775,6 +776,10 @@ NATIVE EE STUFF
     />
     <move
         file='${build.dir}/org_voltdb_utils_ThreadUtils.h'
+        todir='${src.ee.dir}'
+    />
+    <move
+        file='${build.dir}/org_voltdb_utils_ProcessUtils.h'
         todir='${src.ee.dir}'
     />
 </target>
@@ -794,6 +799,10 @@ NATIVE EE STUFF
                 file1="${src.ee.dir}/org_voltdb_utils_ThreadUtils.h"
                 file2="${build.dir}/org_voltdb_utils_ThreadUtils.h"
             />
+            <filesmatch
+                file1="${src.ee.dir}/org_voltdb_utils_ProcessUtils.h"
+                file2="${build.dir}/org_voltdb_utils_ProcessUtils.h"
+            />
         </and>
     </condition>
 </target>
@@ -801,6 +810,8 @@ NATIVE EE STUFF
 <target name='jnicompile_temp'>
     <delete file="${build.dir}/org_voltdb_jni_ExecutionEngine.h"/>
     <delete file="${build.dir}/org_voltdb_utils_DBBPool.h" />
+	<delete file="${build.dir}/org_voltdb_utils_ThreadUtils.h" />
+	<delete file="${build.dir}/org_voltdb_utils_ProcessUtils.h" />
     <javah
         classpathref="project.classpath"
         force="yes"
@@ -820,6 +831,13 @@ NATIVE EE STUFF
         force="yes"
         verbose="yes"
         class="org.voltdb.utils.ThreadUtils"
+        destdir="${build.dir}"
+    />
+    <javah
+        classpathref="project.classpath"
+        force="yes"
+        verbose="yes"
+        class="org.voltdb.utils.ProcessUtils"
         destdir="${build.dir}"
     />
 </target>
