update benchmark codes (simplewindow) to test window behavior

--- a/properties/default.properties
+++ b/properties/default.properties
@@ -10,7 +10,8 @@
 ## ------------------------------------------------------------
 
 # Temporary Directory
-global.temp_dir = ${output.dir}/
+# global.temp_dir = ${output.dir}/
+global.temp_dir = .
 
 # Options used when logging into client/server hosts
 # We assume that there will be no spaces in paths or options listed here
