--- a/properties/default.properties
+++ b/properties/default.properties
@@ -59,6 +59,9 @@ client.scalefactor = 1.0
 # Client Log Directory
 client.log_dir = ${global.temp_dir}/logs/clients
 
+#
+client.output_results_json = false
+
 ## ------------------------------------------------------------
 ## Site Parameters
 ## ------------------------------------------------------------
@@ -68,3 +71,21 @@ site.memory                 = 2048
 
 # Site Log Directory
 site.log_dir               = ${global.temp_dir}/logs/sites
+
+# Site txn incoming delay 
+site.txn_incoming_delay    = 0
+
+# Site 
+site.specexec_enable       = false
+
+# If enabled, log all transaction requests to disk 
+site.commandlog_enable     = true
+
+# Timeout in milliseconds before group commit buffer flushes, if it does not fill
+site.commandlog_timeout    = 500
+
+# Enable the anti-cache feature.
+site.anticache_enable      = false
+
+# If set to true, then the MAP phase of a MapReduceTransaction will be executed as a distributed transaction that blocks the entire cluster. This ensures that the aggregates computed by the MAP phase reads from consistent a consistent state of the database.
+#site.mr_map_blocking       = true
