--- a/properties/benchmarks/ycsb.properties
+++ b/properties/benchmarks/ycsb.properties
@@ -8,3 +8,6 @@ builder = edu.brown.benchmark.ycsb.YCSBProjectBuilder
 # only add the number of tuples defined in 'num_records'
 fixed_size = false
 num_records = 100000
+
+# Zipfian skew factor for tuple access
+skew_factor = 0.5
