update to add initiateTime and localInitiateTime attribute in AbstractTransaction

--- a/properties/default.properties
+++ b/properties/default.properties
@@ -79,7 +79,7 @@ site.txn_incoming_delay    = 0
 site.specexec_enable       = false
 
 # If enabled, log all transaction requests to disk 
-site.commandlog_enable     = true
+site.commandlog_enable     = false
 
 # Timeout in milliseconds before group commit buffer flushes, if it does not fill
 site.commandlog_timeout    = 500
