add functionality to get transaction statistic info - build & run is ok, the result is not ok (FIXME)

--- a/properties/default.properties
+++ b/properties/default.properties
@@ -62,6 +62,9 @@ client.log_dir = ${global.temp_dir}/logs/clients
 #
 client.output_results_json = false
 
+#
+client.output_procedure_stats = ${global.temp_dir}/stats.cvs
+
 ## ------------------------------------------------------------
 ## Site Parameters
 ## ------------------------------------------------------------
