update to make procedure(transaction) statistic work ...

--- a/properties/default.properties
+++ b/properties/default.properties
@@ -21,6 +21,7 @@ global.sshoptions = -x
 # This can't be removed from this file
 global.defaulthost = localhost
 
+global.nanosecond_latencies = true
 ## ------------------------------------------------------------
 ## Benchmark Client Parameters
 ## ------------------------------------------------------------
@@ -63,7 +64,7 @@ client.log_dir = ${global.temp_dir}/logs/clients
 client.output_results_json = false
 
 #
-client.output_procedure_stats = ${global.temp_dir}/stats.cvs
+client.output_procedure_stats = ${global.temp_dir}/stats.csv
 
 ## ------------------------------------------------------------
 ## Site Parameters
