update to do more benchmark

--- a/properties/default.properties
+++ b/properties/default.properties
@@ -21,7 +21,7 @@ global.sshoptions = -x
 # This can't be removed from this file
 global.defaulthost = localhost
 
-global.nanosecond_latencies = true
+global.nanosecond_latencies = false
 ## ------------------------------------------------------------
 ## Benchmark Client Parameters
 ## ------------------------------------------------------------
