deliver the client side codes to get trigger data

--- a/properties/default.properties
+++ b/properties/default.properties
@@ -64,7 +64,10 @@ client.log_dir = ${global.temp_dir}/logs/clients
 client.output_results_json = false
 
 #
-client.output_procedure_stats = ${global.temp_dir}/stats.csv
+client.output_procedure_stats = ${global.temp_dir}/proc_stats.csv
+
+#
+client.output_trigger_stats = $(global.temp_dir)/trigger_stats.csv
 
 ## ------------------------------------------------------------
 ## Site Parameters
