update client side code to get statistic data for trigger (still no data return)

--- a/properties/default.properties
+++ b/properties/default.properties
@@ -67,7 +67,7 @@ client.output_results_json = false
 client.output_procedure_stats = ${global.temp_dir}/proc_stats.csv
 
 #
-client.output_trigger_stats = $(global.temp_dir)/trigger_stats.csv
+client.output_trigger_stats = ./trigger_stats.csv
 
 ## ------------------------------------------------------------
 ## Site Parameters
