deliver the codes for stream stats for 1) whole trigger firing duration; 2) tuple delete duration after firing

--- a/properties/default.properties
+++ b/properties/default.properties
@@ -69,6 +69,9 @@ client.output_procedure_stats = ${global.temp_dir}/proc_stats.csv
 #
 client.output_trigger_stats = ./trigger_stats.csv
 
+#
+client.output_stream_stats = ./stream_stats.csv
+
 ## ------------------------------------------------------------
 ## Site Parameters
 ## ------------------------------------------------------------
