--- a/log4j.properties
+++ b/log4j.properties
@@ -36,6 +36,8 @@ log4j.logger.org.voltdb.VoltSystemProcedure=INFO
 log4j.logger.org.voltdb.client=INFO
 log4j.logger.org.voltdb.compiler=INFO
 log4j.logger.org.voltdb.planner=INFO
+log4j.logger.org.voltdb.sysprocs=INFO
+log4j.logger.org.voltdb.sysprocs.SnapshotSave=TRACE
 
 ## Research Projects
 log4j.logger.edu.brown.hstore.estimators=INFO
